Analizador/Gramatica/parser.out
Created by PLY version 3.11 (http://www.dabeaz.com/ply)

Unused terminals:

    TKN_AND
    TKN_BOOLEAN
    TKN_BREAK
    TKN_CHAR
    TKN_COMA
    TKN_CONTINUE
    TKN_CORCHETEDER
    TKN_CORCHETEIZQ
    TKN_DECREMENTO
    TKN_DEFAULT
    TKN_DIFERENTE
    TKN_DOSPUNTOS
    TKN_DOUBLE
    TKN_ELSE
    TKN_FALSE
    TKN_FOR
    TKN_IF
    TKN_IGUAL
    TKN_IGUAL_IGUAL
    TKN_INCREMENTO
    TKN_INT
    TKN_LENGTH
    TKN_MAIN
    TKN_MAYOR
    TKN_MAYORI
    TKN_MENOR
    TKN_MENORI
    TKN_MOD
    TKN_NEW
    TKN_NOT
    TKN_NULL
    TKN_OR
    TKN_POTENCIA
    TKN_PRINT
    TKN_PUNTO
    TKN_READ
    TKN_RETURN
    TKN_ROUND
    TKN_STRING
    TKN_SWITCH
    TKN_TOLOWER
    TKN_TO_UPPER
    TKN_TRUE
    TKN_TRUNCATE
    TKN_TYPE_OF
    TKN_VOID
    TKN_WHILE

Grammar

Rule 0     S' -> instrucciones
Rule 1     instrucciones -> instrucciones instruccion
Rule 2     instrucciones -> instruccion
Rule 3     instruccion -> TKN_CASE TKN_LLAVEIZQ expresion TKN_LLAVEDER TKN_PTCOMA
Rule 4     expresion -> expresion TKN_MAS expresion
Rule 5     expresion -> expresion TKN_MENOS expresion
Rule 6     expresion -> expresion TKN_POR expresion
Rule 7     expresion -> expresion TKN_DIV expresion
Rule 8     expresion -> TKN_MENOS expresion
Rule 9     expresion -> TKN_PARIZQ expresion TKN_PARDER
Rule 10    expresion -> ENTERO
Rule 11    expresion -> DECIMAL

Terminals, with rules where they appear

DECIMAL              : 11
ENTERO               : 10
TKN_AND              : 
TKN_BOOLEAN          : 
TKN_BREAK            : 
TKN_CASE             : 3
TKN_CHAR             : 
TKN_COMA             : 
TKN_CONTINUE         : 
TKN_CORCHETEDER      : 
TKN_CORCHETEIZQ      : 
TKN_DECREMENTO       : 
TKN_DEFAULT          : 
TKN_DIFERENTE        : 
TKN_DIV              : 7
TKN_DOSPUNTOS        : 
TKN_DOUBLE           : 
TKN_ELSE             : 
TKN_FALSE            : 
TKN_FOR              : 
TKN_IF               : 
TKN_IGUAL            : 
TKN_IGUAL_IGUAL      : 
TKN_INCREMENTO       : 
TKN_INT              : 
TKN_LENGTH           : 
TKN_LLAVEDER         : 3
TKN_LLAVEIZQ         : 3
TKN_MAIN             : 
TKN_MAS              : 4
TKN_MAYOR            : 
TKN_MAYORI           : 
TKN_MENOR            : 
TKN_MENORI           : 
TKN_MENOS            : 5 8
TKN_MOD              : 
TKN_NEW              : 
TKN_NOT              : 
TKN_NULL             : 
TKN_OR               : 
TKN_PARDER           : 9
TKN_PARIZQ           : 9
TKN_POR              : 6
TKN_POTENCIA         : 
TKN_PRINT            : 
TKN_PTCOMA           : 3
TKN_PUNTO            : 
TKN_READ             : 
TKN_RETURN           : 
TKN_ROUND            : 
TKN_STRING           : 
TKN_SWITCH           : 
TKN_TOLOWER          : 
TKN_TO_UPPER         : 
TKN_TRUE             : 
TKN_TRUNCATE         : 
TKN_TYPE_OF          : 
TKN_VOID             : 
TKN_WHILE            : 
error                : 

Nonterminals, with rules where they appear

expresion            : 3 4 4 5 5 6 6 7 7 8 9
instruccion          : 1 2
instrucciones        : 1 0

Parsing method: LALR

state 0

    (0) S' -> . instrucciones
    (1) instrucciones -> . instrucciones instruccion
    (2) instrucciones -> . instruccion
    (3) instruccion -> . TKN_CASE TKN_LLAVEIZQ expresion TKN_LLAVEDER TKN_PTCOMA

    TKN_CASE        shift and go to state 3

    instrucciones                  shift and go to state 1
    instruccion                    shift and go to state 2

state 1

    (0) S' -> instrucciones .
    (1) instrucciones -> instrucciones . instruccion
    (3) instruccion -> . TKN_CASE TKN_LLAVEIZQ expresion TKN_LLAVEDER TKN_PTCOMA

    TKN_CASE        shift and go to state 3

    instruccion                    shift and go to state 4

state 2

    (2) instrucciones -> instruccion .

    TKN_CASE        reduce using rule 2 (instrucciones -> instruccion .)
    $end            reduce using rule 2 (instrucciones -> instruccion .)


state 3

    (3) instruccion -> TKN_CASE . TKN_LLAVEIZQ expresion TKN_LLAVEDER TKN_PTCOMA

    TKN_LLAVEIZQ    shift and go to state 5


state 4

    (1) instrucciones -> instrucciones instruccion .

    TKN_CASE        reduce using rule 1 (instrucciones -> instrucciones instruccion .)
    $end            reduce using rule 1 (instrucciones -> instrucciones instruccion .)


state 5

    (3) instruccion -> TKN_CASE TKN_LLAVEIZQ . expresion TKN_LLAVEDER TKN_PTCOMA
    (4) expresion -> . expresion TKN_MAS expresion
    (5) expresion -> . expresion TKN_MENOS expresion
    (6) expresion -> . expresion TKN_POR expresion
    (7) expresion -> . expresion TKN_DIV expresion
    (8) expresion -> . TKN_MENOS expresion
    (9) expresion -> . TKN_PARIZQ expresion TKN_PARDER
    (10) expresion -> . ENTERO
    (11) expresion -> . DECIMAL

    TKN_MENOS       shift and go to state 7
    TKN_PARIZQ      shift and go to state 8
    ENTERO          shift and go to state 9
    DECIMAL         shift and go to state 10

    expresion                      shift and go to state 6

state 6

    (3) instruccion -> TKN_CASE TKN_LLAVEIZQ expresion . TKN_LLAVEDER TKN_PTCOMA
    (4) expresion -> expresion . TKN_MAS expresion
    (5) expresion -> expresion . TKN_MENOS expresion
    (6) expresion -> expresion . TKN_POR expresion
    (7) expresion -> expresion . TKN_DIV expresion

    TKN_LLAVEDER    shift and go to state 11
    TKN_MAS         shift and go to state 12
    TKN_MENOS       shift and go to state 13
    TKN_POR         shift and go to state 14
    TKN_DIV         shift and go to state 15


state 7

    (8) expresion -> TKN_MENOS . expresion
    (4) expresion -> . expresion TKN_MAS expresion
    (5) expresion -> . expresion TKN_MENOS expresion
    (6) expresion -> . expresion TKN_POR expresion
    (7) expresion -> . expresion TKN_DIV expresion
    (8) expresion -> . TKN_MENOS expresion
    (9) expresion -> . TKN_PARIZQ expresion TKN_PARDER
    (10) expresion -> . ENTERO
    (11) expresion -> . DECIMAL

    TKN_MENOS       shift and go to state 7
    TKN_PARIZQ      shift and go to state 8
    ENTERO          shift and go to state 9
    DECIMAL         shift and go to state 10

    expresion                      shift and go to state 16

state 8

    (9) expresion -> TKN_PARIZQ . expresion TKN_PARDER
    (4) expresion -> . expresion TKN_MAS expresion
    (5) expresion -> . expresion TKN_MENOS expresion
    (6) expresion -> . expresion TKN_POR expresion
    (7) expresion -> . expresion TKN_DIV expresion
    (8) expresion -> . TKN_MENOS expresion
    (9) expresion -> . TKN_PARIZQ expresion TKN_PARDER
    (10) expresion -> . ENTERO
    (11) expresion -> . DECIMAL

    TKN_MENOS       shift and go to state 7
    TKN_PARIZQ      shift and go to state 8
    ENTERO          shift and go to state 9
    DECIMAL         shift and go to state 10

    expresion                      shift and go to state 17

state 9

    (10) expresion -> ENTERO .

    TKN_LLAVEDER    reduce using rule 10 (expresion -> ENTERO .)
    TKN_MAS         reduce using rule 10 (expresion -> ENTERO .)
    TKN_MENOS       reduce using rule 10 (expresion -> ENTERO .)
    TKN_POR         reduce using rule 10 (expresion -> ENTERO .)
    TKN_DIV         reduce using rule 10 (expresion -> ENTERO .)
    TKN_PARDER      reduce using rule 10 (expresion -> ENTERO .)


state 10

    (11) expresion -> DECIMAL .

    TKN_LLAVEDER    reduce using rule 11 (expresion -> DECIMAL .)
    TKN_MAS         reduce using rule 11 (expresion -> DECIMAL .)
    TKN_MENOS       reduce using rule 11 (expresion -> DECIMAL .)
    TKN_POR         reduce using rule 11 (expresion -> DECIMAL .)
    TKN_DIV         reduce using rule 11 (expresion -> DECIMAL .)
    TKN_PARDER      reduce using rule 11 (expresion -> DECIMAL .)


state 11

    (3) instruccion -> TKN_CASE TKN_LLAVEIZQ expresion TKN_LLAVEDER . TKN_PTCOMA

    TKN_PTCOMA      shift and go to state 18


state 12

    (4) expresion -> expresion TKN_MAS . expresion
    (4) expresion -> . expresion TKN_MAS expresion
    (5) expresion -> . expresion TKN_MENOS expresion
    (6) expresion -> . expresion TKN_POR expresion
    (7) expresion -> . expresion TKN_DIV expresion
    (8) expresion -> . TKN_MENOS expresion
    (9) expresion -> . TKN_PARIZQ expresion TKN_PARDER
    (10) expresion -> . ENTERO
    (11) expresion -> . DECIMAL

    TKN_MENOS       shift and go to state 7
    TKN_PARIZQ      shift and go to state 8
    ENTERO          shift and go to state 9
    DECIMAL         shift and go to state 10

    expresion                      shift and go to state 19

state 13

    (5) expresion -> expresion TKN_MENOS . expresion
    (4) expresion -> . expresion TKN_MAS expresion
    (5) expresion -> . expresion TKN_MENOS expresion
    (6) expresion -> . expresion TKN_POR expresion
    (7) expresion -> . expresion TKN_DIV expresion
    (8) expresion -> . TKN_MENOS expresion
    (9) expresion -> . TKN_PARIZQ expresion TKN_PARDER
    (10) expresion -> . ENTERO
    (11) expresion -> . DECIMAL

    TKN_MENOS       shift and go to state 7
    TKN_PARIZQ      shift and go to state 8
    ENTERO          shift and go to state 9
    DECIMAL         shift and go to state 10

    expresion                      shift and go to state 20

state 14

    (6) expresion -> expresion TKN_POR . expresion
    (4) expresion -> . expresion TKN_MAS expresion
    (5) expresion -> . expresion TKN_MENOS expresion
    (6) expresion -> . expresion TKN_POR expresion
    (7) expresion -> . expresion TKN_DIV expresion
    (8) expresion -> . TKN_MENOS expresion
    (9) expresion -> . TKN_PARIZQ expresion TKN_PARDER
    (10) expresion -> . ENTERO
    (11) expresion -> . DECIMAL

    TKN_MENOS       shift and go to state 7
    TKN_PARIZQ      shift and go to state 8
    ENTERO          shift and go to state 9
    DECIMAL         shift and go to state 10

    expresion                      shift and go to state 21

state 15

    (7) expresion -> expresion TKN_DIV . expresion
    (4) expresion -> . expresion TKN_MAS expresion
    (5) expresion -> . expresion TKN_MENOS expresion
    (6) expresion -> . expresion TKN_POR expresion
    (7) expresion -> . expresion TKN_DIV expresion
    (8) expresion -> . TKN_MENOS expresion
    (9) expresion -> . TKN_PARIZQ expresion TKN_PARDER
    (10) expresion -> . ENTERO
    (11) expresion -> . DECIMAL

    TKN_MENOS       shift and go to state 7
    TKN_PARIZQ      shift and go to state 8
    ENTERO          shift and go to state 9
    DECIMAL         shift and go to state 10

    expresion                      shift and go to state 22

state 16

    (8) expresion -> TKN_MENOS expresion .
    (4) expresion -> expresion . TKN_MAS expresion
    (5) expresion -> expresion . TKN_MENOS expresion
    (6) expresion -> expresion . TKN_POR expresion
    (7) expresion -> expresion . TKN_DIV expresion

    TKN_LLAVEDER    reduce using rule 8 (expresion -> TKN_MENOS expresion .)
    TKN_MAS         reduce using rule 8 (expresion -> TKN_MENOS expresion .)
    TKN_MENOS       reduce using rule 8 (expresion -> TKN_MENOS expresion .)
    TKN_POR         reduce using rule 8 (expresion -> TKN_MENOS expresion .)
    TKN_DIV         reduce using rule 8 (expresion -> TKN_MENOS expresion .)
    TKN_PARDER      reduce using rule 8 (expresion -> TKN_MENOS expresion .)

  ! TKN_MAS         [ shift and go to state 12 ]
  ! TKN_MENOS       [ shift and go to state 13 ]
  ! TKN_POR         [ shift and go to state 14 ]
  ! TKN_DIV         [ shift and go to state 15 ]


state 17

    (9) expresion -> TKN_PARIZQ expresion . TKN_PARDER
    (4) expresion -> expresion . TKN_MAS expresion
    (5) expresion -> expresion . TKN_MENOS expresion
    (6) expresion -> expresion . TKN_POR expresion
    (7) expresion -> expresion . TKN_DIV expresion

    TKN_PARDER      shift and go to state 23
    TKN_MAS         shift and go to state 12
    TKN_MENOS       shift and go to state 13
    TKN_POR         shift and go to state 14
    TKN_DIV         shift and go to state 15


state 18

    (3) instruccion -> TKN_CASE TKN_LLAVEIZQ expresion TKN_LLAVEDER TKN_PTCOMA .

    TKN_CASE        reduce using rule 3 (instruccion -> TKN_CASE TKN_LLAVEIZQ expresion TKN_LLAVEDER TKN_PTCOMA .)
    $end            reduce using rule 3 (instruccion -> TKN_CASE TKN_LLAVEIZQ expresion TKN_LLAVEDER TKN_PTCOMA .)


state 19

    (4) expresion -> expresion TKN_MAS expresion .
    (4) expresion -> expresion . TKN_MAS expresion
    (5) expresion -> expresion . TKN_MENOS expresion
    (6) expresion -> expresion . TKN_POR expresion
    (7) expresion -> expresion . TKN_DIV expresion

    TKN_LLAVEDER    reduce using rule 4 (expresion -> expresion TKN_MAS expresion .)
    TKN_MAS         reduce using rule 4 (expresion -> expresion TKN_MAS expresion .)
    TKN_MENOS       reduce using rule 4 (expresion -> expresion TKN_MAS expresion .)
    TKN_PARDER      reduce using rule 4 (expresion -> expresion TKN_MAS expresion .)
    TKN_POR         shift and go to state 14
    TKN_DIV         shift and go to state 15

  ! TKN_POR         [ reduce using rule 4 (expresion -> expresion TKN_MAS expresion .) ]
  ! TKN_DIV         [ reduce using rule 4 (expresion -> expresion TKN_MAS expresion .) ]
  ! TKN_MAS         [ shift and go to state 12 ]
  ! TKN_MENOS       [ shift and go to state 13 ]


state 20

    (5) expresion -> expresion TKN_MENOS expresion .
    (4) expresion -> expresion . TKN_MAS expresion
    (5) expresion -> expresion . TKN_MENOS expresion
    (6) expresion -> expresion . TKN_POR expresion
    (7) expresion -> expresion . TKN_DIV expresion

    TKN_LLAVEDER    reduce using rule 5 (expresion -> expresion TKN_MENOS expresion .)
    TKN_MAS         reduce using rule 5 (expresion -> expresion TKN_MENOS expresion .)
    TKN_MENOS       reduce using rule 5 (expresion -> expresion TKN_MENOS expresion .)
    TKN_PARDER      reduce using rule 5 (expresion -> expresion TKN_MENOS expresion .)
    TKN_POR         shift and go to state 14
    TKN_DIV         shift and go to state 15

  ! TKN_POR         [ reduce using rule 5 (expresion -> expresion TKN_MENOS expresion .) ]
  ! TKN_DIV         [ reduce using rule 5 (expresion -> expresion TKN_MENOS expresion .) ]
  ! TKN_MAS         [ shift and go to state 12 ]
  ! TKN_MENOS       [ shift and go to state 13 ]


state 21

    (6) expresion -> expresion TKN_POR expresion .
    (4) expresion -> expresion . TKN_MAS expresion
    (5) expresion -> expresion . TKN_MENOS expresion
    (6) expresion -> expresion . TKN_POR expresion
    (7) expresion -> expresion . TKN_DIV expresion

    TKN_LLAVEDER    reduce using rule 6 (expresion -> expresion TKN_POR expresion .)
    TKN_MAS         reduce using rule 6 (expresion -> expresion TKN_POR expresion .)
    TKN_MENOS       reduce using rule 6 (expresion -> expresion TKN_POR expresion .)
    TKN_POR         reduce using rule 6 (expresion -> expresion TKN_POR expresion .)
    TKN_DIV         reduce using rule 6 (expresion -> expresion TKN_POR expresion .)
    TKN_PARDER      reduce using rule 6 (expresion -> expresion TKN_POR expresion .)

  ! TKN_MAS         [ shift and go to state 12 ]
  ! TKN_MENOS       [ shift and go to state 13 ]
  ! TKN_POR         [ shift and go to state 14 ]
  ! TKN_DIV         [ shift and go to state 15 ]


state 22

    (7) expresion -> expresion TKN_DIV expresion .
    (4) expresion -> expresion . TKN_MAS expresion
    (5) expresion -> expresion . TKN_MENOS expresion
    (6) expresion -> expresion . TKN_POR expresion
    (7) expresion -> expresion . TKN_DIV expresion

    TKN_LLAVEDER    reduce using rule 7 (expresion -> expresion TKN_DIV expresion .)
    TKN_MAS         reduce using rule 7 (expresion -> expresion TKN_DIV expresion .)
    TKN_MENOS       reduce using rule 7 (expresion -> expresion TKN_DIV expresion .)
    TKN_POR         reduce using rule 7 (expresion -> expresion TKN_DIV expresion .)
    TKN_DIV         reduce using rule 7 (expresion -> expresion TKN_DIV expresion .)
    TKN_PARDER      reduce using rule 7 (expresion -> expresion TKN_DIV expresion .)

  ! TKN_MAS         [ shift and go to state 12 ]
  ! TKN_MENOS       [ shift and go to state 13 ]
  ! TKN_POR         [ shift and go to state 14 ]
  ! TKN_DIV         [ shift and go to state 15 ]


state 23

    (9) expresion -> TKN_PARIZQ expresion TKN_PARDER .

    TKN_LLAVEDER    reduce using rule 9 (expresion -> TKN_PARIZQ expresion TKN_PARDER .)
    TKN_MAS         reduce using rule 9 (expresion -> TKN_PARIZQ expresion TKN_PARDER .)
    TKN_MENOS       reduce using rule 9 (expresion -> TKN_PARIZQ expresion TKN_PARDER .)
    TKN_POR         reduce using rule 9 (expresion -> TKN_PARIZQ expresion TKN_PARDER .)
    TKN_DIV         reduce using rule 9 (expresion -> TKN_PARIZQ expresion TKN_PARDER .)
    TKN_PARDER      reduce using rule 9 (expresion -> TKN_PARIZQ expresion TKN_PARDER .)

